k8s/01_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: element36-io
  labels:
    client: internal
    env: prod
