k8s/02_cash36-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: cash36-frontend
  namespace: gitlab-managed-apps #element36-io
spec:
  type: ClusterIP
  selector:
    component: cash36-frontend
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cash36-frontend
  namespace: gitlab-managed-apps #element36-io
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cash36-frontend
  template:
    metadata:
      labels:
        component: cash36-frontend
    spec:
      imagePullSecrets:
        - name: cash36-frontend-regcred
      containers:
        - env:
            - name: NODE_ENV
              value: development
          image: registry.gitlab.com/cash36/cash36-frontend:dev-latest
          imagePullPolicy: Always
          name: cash36-frontend
          ports:
            - containerPort: 3000
